--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 	<title>Mapas Obras</title>
 	<style>
-		body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+	body {
+		padding: 50px;
+		font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+	}
 
-a {
-  color: #00B7FF;
-}
-#map { height: 500px; }
+	a {
+		color: #00B7FF;
+	}
+	#map { height: 500px; }
 	</style>
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 </head>
@@ -21,7 +21,8 @@ a {
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 	<script src="js/kml-plugin.js"></script>
-	<script src="js/heatmap.js"></script>
+	<!-- // <script src="js/heatmap.js"></script> -->
+	<script src="js/heatmap2.js"></script>
 	<script src="js/mapas.js"></script>
 </body>
 </html>
